--- a/default-cluster-pod-security-policies.yaml
+++ b/default-cluster-pod-security-policies.yaml
@@ -1,17 +1,23 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: default-cluster-pod-security-policies
-  namespace: flux   # we put HelmRelease resources into flux namespace to make use of secretRef with Git credentials
+  namespace: flux-system
 spec:
+  # The interval at which to reconcile the Helm release
+  interval: 10m
   releaseName: default-cluster-pod-security-policies
-  targetNamespace: kube-system   # the namespace where Helm chart gets deployed
+  targetNamespace: kube-system
   chart:
-    git: "https://bitbucket.org/example/helm"
-    path: "security/default-cluster-pod-security-policies"
-    version: "0.1.0"
-    secretRef:
-      name: flux-git-auth
-  valuesFrom:
-  - configMapKeyRef:
-      name: default-cluster-values
+    spec:
+      # The path of the chart relative to the repository root
+      chart: ./security/default-cluster-pod-security-policies
+      version: '0.1.0'
+      # The reference to the GitRepository
+      sourceRef:
+        kind: HelmRepository
+        name: helm-repo
+        namespace: flux-system
+      valuesFrom:
+      - kind: ConfigMap
+        name: default-cluster-values
