--- a/fluent-bit-meta.yaml
+++ b/fluent-bit-meta.yaml
@@ -1,18 +1,24 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: fluent-bit-meta
-  namespace: flux   # we put HelmRelease resources into flux namespace to make use of secretRef with Git credentials
+  namespace: flux-system
 spec:
+  # The interval at which to reconcile the Helm release
+  interval: 10m
   releaseName: fluent-bit-meta
-  targetNamespace: flux   # the namespace where Helm chart gets deployed
+  targetNamespace: flux-system
   chart:
-    git: "https://bitbucket.org/example/helm"
-    path: "logging/fluent-bit-meta"
-    ref: "master"
-    version: "0.1.0"
-    secretRef:
-      name: flux-git-auth
-  valuesFrom:
-  - configMapKeyRef:
-      name: default-cluster-values
+    spec:
+      # The path of the chart relative to the repository root
+      chart: ./logging/fluent-bit-meta
+      version: '0.1.0'
+      ref: 'master'
+      # The reference to the GitRepository
+      sourceRef:
+        kind: HelmRepository
+        name: helm-repo
+        namespace: flux-system
+      valuesFrom:
+      - kind: ConfigMap
+        name: default-cluster-values
