--- a/helm-repo.yaml
+++ b/helm-repo.yaml
@@ -1,5 +1,5 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
+kind: GitRepository
 metadata:
   name: helm-repo
   namespace: flux-system
@@ -8,4 +8,5 @@ spec:
   interval: 10m
   secretRef:
     name: flux-git-auth
-    
+  ref:
+    branch: master
